[CORE][ADD] Light Test Version - Add point light to the left object - Add ideal distance test

--- a/FinalProject/mainwindow.qrc
+++ b/FinalProject/mainwindow.qrc
@@ -1,9 +1,7 @@
 <RCC>
     <qresource prefix="/shaders">
-        <file>fragmentshader.fs</file>
-        <file>vertexshader.vs</file>
-        <file>illuminant.fs</file>
-        <file>illuminant.vs</file>
+        <file>fragmentshader.glsl</file>
+        <file>vertexshader.glsl</file>
     </qresource>
     <qresource prefix="/fonts">
         <file>font_awesome_6_regular_free.otf</file>
