[CORE][CHG] SkyBox Test

--- a/FinalProject/mainwindow.qrc
+++ b/FinalProject/mainwindow.qrc
@@ -2,6 +2,10 @@
     <qresource prefix="/shaders">
         <file>fragmentshader.glsl</file>
         <file>vertexshader.glsl</file>
+        <file>skyboxvertexshader.glsl</file>
+        <file>terrainfragmentshader.glsl</file>
+        <file>terrainvertexshader.glsl</file>
+        <file>skyboxfragmentshader.glsl</file>
     </qresource>
     <qresource prefix="/fonts">
         <file>font_awesome_6_regular_free.otf</file>
