[CORE][ADD] Click selection test - Hover detection - Click detection - Move / Scale / Rotate(have bug) - Bounding box display - Gesture done

--- a/FinalProject/mainwindow.qrc
+++ b/FinalProject/mainwindow.qrc
@@ -8,6 +8,8 @@
         <file>skyboxfragmentshader.glsl</file>
         <file>boundfragmentshader.glsl</file>
         <file>boundvertexshader.glsl</file>
+        <file>thumbnailfragmentshader.glsl</file>
+        <file>thumbnailvertexshader.glsl</file>
     </qresource>
     <qresource prefix="/fonts">
         <file>font_awesome_6_regular_free.otf</file>
